<resources>
  <string name="sync_calendar">Sync calendar</string>
  <string name="cancel">Cancel</string>
  <string name="yes">Yes</string>
  <string name="no">No</string>
  <string name="done">Done</string>
  <string name="developer">Developer</string>
  <string name="credits">Credits</string>
  <string name="licenses">Open Source Licenses</string>
  <string name="source_code">Source Code</string>
  <string name="other">Other</string>
  <string name="auth_failed">Trakt authorization failed</string>
  <string name="auth_failed_desc">Touch to re-authorize with Trakt</string>
  <string name="auth_failed_crouton">Trakt authorization failed</string>
  <string name="auth_failed_crouton_action">Sign in</string>
  <string name="logout_title">Log out</string>
  <string name="logout_message">Are you sure you want to log out?</string>
  <string name="logout_button">Log out</string>
  <string name="checkin_message_title">Check in message</string>
  <string name="checkin_message_default">I\'m watching [item]</string>
  <string name="checkin_error_notification_title">Check in failed</string>
  <string name="checkin_error_notification_body">Unable to check in %1$s</string>
  <string name="share_to">Share to</string>
  <string name="facebook">Facebook</string>
  <string name="twitter">Twitter</string>
  <string name="tumblr">Tumblr</string>
  <string name="genres">Genres</string>
  <string name="biography">Biography</string>
  <string name="to_watch">To watch</string>
  <string name="to_collect">To collect</string>
  <string name="last_watched">Last watched</string>
  <string name="last_collected">Last collected</string>
  <string name="info_trailer">Trailer</string>
  <string name="title_cast">Cast</string>
  <string name="title_comments">Comments</string>
  <string name="title_comment_add">Add comment</string>
  <string name="title_comment_update">Update comment</string>
  <string name="title_comment_reply">Reply</string>
  <string name="title_links">Links</string>
  <string name="title_related">Related</string>
  <string name="related_rating">%1$s (%2$d votes)</string>
  <string name="related_rating_thousands">%1$s (%2$sk votes)</string>
  <string name="person_department_cast">Cast</string>
  <string name="person_department_production">Production</string>
  <string name="person_department_art">Art</string>
  <string name="person_department_crew">Crew</string>
  <string name="person_department_costume_makeup">Costume &amp; make-up</string>
  <string name="person_department_directing">Directing</string>
  <string name="person_department_writing">Writing</string>
  <string name="person_department_sound">Sound</string>
  <string name="person_department_camera">Camera</string>
  <string name="person_born">Born</string>
  <string name="person_death">Death</string>
  <string name="title_suggestions">Suggestions</string>
  <string name="title_recommended">Recommended</string>
  <string name="title_trending">Trending</string>
  <string name="title_anticipated">Anticipated</string>
  <string name="title_dashboard">Dashboard</string>
  <string name="title_shows_watched">Watched shows</string>
  <string name="title_shows_upcoming">Upcoming shows</string>
  <string name="title_shows_collection">Show collection</string>
  <string name="title_shows_watchlist">Show watchlist</string>
  <string name="title_shows_trending">Trending shows</string>
  <string name="title_shows_recommended">Recommended shows</string>
  <string name="title_shows_anticipated">Anticipated shows</string>
  <string name="title_movies_watched">Watched movies</string>
  <string name="title_movies_collection">Movie collection</string>
  <string name="title_movies_watchlist">Movie watchlist</string>
  <string name="title_movies_trending">Trending movies</string>
  <string name="title_movies_recommended">Recommended movies</string>
  <string name="title_movies_anticipated">Anticipated movies</string>
  <string name="category_shows_upcoming">Upcoming shows</string>
  <string name="category_shows_watchlist">Show watchlist</string>
  <string name="category_shows_suggestions">Show suggestions</string>
  <string name="category_movies_watchlist">Movie watchlist</string>
  <string name="category_movies_suggestions">Movie suggestions</string>
  <string name="info_trakt">Trakt</string>
  <string name="info_imdb">IMDb</string>
  <string name="info_tvdb">TheTVDB</string>
  <string name="info_tmdb">TMDb</string>
  <string name="title_settings">Settings</string>
  <string name="header_aired">Aired</string>
  <string name="header_upcoming">Upcoming</string>
  <string name="header_shows">Shows</string>
  <string name="header_episodes">Episodes</string>
  <string name="header_hidden_calendar_shows">Shows hidden from calendar and upcoming</string>
  <string name="header_hidden_watched_shows">Shows hidden from watched list</string>
  <string name="header_hidden_collected_shows">Shows hidden from collection</string>
  <string name="header_hidden_calendar_movies">Movies hidden from calendar</string>
  <string name="sort_title">Title</string>
  <string name="sort_next_episode">Next episode</string>
  <string name="sort_last_watched">Last watched</string>
  <string name="sort_rating">Rating</string>
  <string name="sort_relevance">Relevance</string>
  <string name="sort_viewers">Viewers</string>
  <string name="sort_watched">Last watched</string>
  <string name="sort_collected">Last collected</string>
  <string name="sort_anticipated">Most anticipated</string>
  <string name="sort_rank">Rank</string>
  <string name="sort_added">Recently added</string>
  <string name="sort_released">Release date</string>
  <string name="sort_runtime">Runtime</string>
  <string name="sort_popularity">Popularity</string>
  <string name="sort_percentage">Percentage</string>
  <string name="sort_votes">Votes</string>
  <string name="sort_user_rating">User rating</string>
  <string name="sort_random">Random</string>
  <string name="action_sort_by">Sort by</string>
  <string name="action_history_add">Add to history</string>
  <string name="action_history_remove">Remove from history</string>
  <string name="action_history_add_older">Add previous to history</string>
  <string name="action_watched_hide">Hide</string>
  <string name="action_checkin">Check in</string>
  <string name="action_checkin_cancel">Cancel checkin</string>
  <string name="action_collection_add">Add to collection</string>
  <string name="action_collect_next">Collect next</string>
  <string name="action_collection_remove">Remove from collection</string>
  <string name="action_collection_hide">Hide</string>
  <string name="action_watchlist_add">Add to watchlist</string>
  <string name="action_watchlist_remove">Remove from watchlist</string>
  <string name="action_rate">Rate</string>
  <string name="action_recommendation_dismiss">Dismiss recommendation</string>
  <string name="action_list_create">Create list</string>
  <string name="action_list_update">Update list</string>
  <string name="action_list_edit">Edit list</string>
  <string name="action_list_delete">Delete list</string>
  <string name="action_create">Create</string>
  <string name="action_update">Update</string>
  <string name="action_list_remove">Remove from list</string>
  <string name="action_list_add">Add to lists</string>
  <string name="action_submit">Submit</string>
  <string name="action_comment_add">Add comment</string>
  <string name="action_reply">Reply</string>
  <string name="action_calendar_hide">Hide from upcoming</string>
  <string name="action_calendar_unhide">Unhide from upcoming</string>
  <string name="action_unhide">Unhide</string>
  <string name="checkmark_watched">Watched</string>
  <string name="checkmark_collection">In collection</string>
  <string name="checkmark_watchlist">In watchlist</string>
  <string name="search_empty">Search shows and movies</string>
  <string name="search_no_results">No results</string>
  <string name="search_recent">Recent queries</string>
  <string name="search_searching">Searching…</string>
  <string name="search_error">Search failed, please try again</string>
  <string name="episode_next">Next: %1$s</string>
  <string name="show_watching">Watching</string>
  <string name="shows_loading_trending">Trending shows are loading…</string>
  <string name="movies_loading_trending">Trending movies are loading…</string>
  <string name="shows_loading_anticipated">Anticipated shows are loading…</string>
  <string name="movies_loading_anticipated">Anticipated movies are loading…</string>
  <string name="show_status_returning">Returning series</string>
  <string name="show_status_in_production">In production</string>
  <string name="show_status_planned">Planned</string>
  <string name="show_status_canceled">Canceled</string>
  <string name="show_status_ended">Ended</string>
  <string name="history_watched_when">When did you watch it?</string>
  <string name="history_watched_now">Now</string>
  <string name="history_watched_release">Release date</string>
  <string name="history_watched_other">Other date</string>
  <string name="history_watched_date">Date</string>
  <string name="history_watched_time">Time</string>
  <string name="history_unwatched_title">Remove from history?</string>
  <string name="history_unwatched_all">All plays</string>
  <string name="prompt_link">Link with Trakt</string>
  <string name="prompt_link_summary">Would you like with link with your Trakt account?</string>
  <string name="preference_startpage">Start page</string>
  <string name="preference_darkmode">Dark mode</string>
  <string name="preference_data">Data</string>
  <string name="preference_hidden_items">Hidden items</string>
  <string name="preference_shows_avoid_spoilers">Avoid spoilers</string>
  <string name="preference_shows_avoid_spoilers_sum">Hide episode titles and descriptions until episode is watched</string>
  <string name="preference_upcoming_time">Next episode air date</string>
  <string name="preference_upcoming_time_summary">
    Display show in upcoming if the next episode airs within this timeframe
  </string>
  <string name="preference_shows_offset">Offset air time</string>
  <string name="preference_shows_offset_sum">Number of hours to offset show air dates by</string>
  <string name="preference_integration">Integration</string>
  <string name="preference_calendar">Display upcoming shows in calendar</string>
  <string name="preference_calendar_color">Calendar color</string>
  <string name="preference_notifications">Notifications</string>
  <string name="preference_notifications_summary">Display a notification when a tv show is about to air</string>
  <string name="preference_trakt">Trakt</string>
  <string name="preference_trakt_link">Connect to Trakt</string>
  <string name="preference_trakt_link_sum">Synchronize your shows and lists with trakt.tv</string>
  <string name="preference_trakt_unlink">Disconnect from Trakt</string>
  <string name="preference_other">Other</string>
  <string name="preference_about">About</string>
  <string name="preference_privacy">Privacy policy</string>
  <string name="preference_notification_time">When</string>
  <string name="preference_notification_time_summary">
    How long in advance the notification should happen
  </string>
  <string name="preference_notification_vibrate">Vibrate</string>
  <string name="preference_notification_vibrate_sum">Vibrate on notification</string>
  <string name="preference_notification_sound">Sound</string>
  <string name="preference_notification_sound_sum">Play default notification sound</string>
  <string name="list_create_name">Name</string>
  <string name="list_create_description">Description</string>
  <string name="list_create_privacy">Privacy</string>
  <string name="list_create_allow_comments">Allow comments</string>
  <string name="list_create_display_numbers">Display numbers</string>
  <string name="list_create_sort_by">Sort by</string>
  <string name="list_create_sort_orientation">Sort orientation</string>
</resources>