<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 Simon Vig Therkildsen
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <ListPreference
      android:defaultValue="@string/settings_startpage_default"
      android:dialogTitle="@string/preference_startpage"
      android:entries="@array/setting_startpage"
      android:entryValues="@array/setting_startpage_values"
      android:key="startPage"
      android:title="@string/preference_startpage"
      app:iconSpaceReserved="false"/>

  <ListPreference
      android:defaultValue="@string/settings_darkmode_default"
      android:dialogTitle="@string/preference_darkmode"
      android:entries="@array/setting_darkmode"
      android:entryValues="@array/setting_darkmode_values"
      android:key="darkMode"
      android:title="@string/preference_darkmode"
      app:iconSpaceReserved="false"/>

  <PreferenceCategory
      android:title="@string/preference_data"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="hiddenItems"
      android:title="@string/preference_hidden_items"
      app:iconSpaceReserved="false"/>

  <CheckBoxPreference
      android:key="showsAvoidSpoilers"
      android:summary="@string/preference_shows_avoid_spoilers_sum"
      android:title="@string/preference_shows_avoid_spoilers"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="showsOffset"
      android:summary="@string/preference_shows_offset_sum"
      android:title="@string/preference_shows_offset"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="upcomingTime"
      android:summary="@string/preference_upcoming_time_summary"
      android:title="@string/preference_upcoming_time"
      app:iconSpaceReserved="false"/>

  <PreferenceCategory
      android:title="@string/preference_integration"
      app:iconSpaceReserved="false"/>

  <SwitchPreference
      android:key="calendarSync"
      android:title="@string/preference_calendar"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="calendarColor"
      android:title="@string/preference_calendar_color"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="notifications"
      android:title="@string/preference_notifications"
      app:iconSpaceReserved="false"/>

  <PreferenceCategory
      android:title="@string/preference_trakt"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="traktLink"
      android:summary="@string/preference_trakt_link_sum"
      android:title="@string/preference_trakt_link"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="traktUnlink"
      android:title="@string/preference_trakt_unlink"
      app:iconSpaceReserved="false"/>

  <PreferenceCategory
      android:title="@string/preference_other"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="about"
      android:title="@string/preference_about"
      app:iconSpaceReserved="false"/>

  <Preference
      android:key="privacy"
      android:title="@string/preference_privacy"
      app:iconSpaceReserved="false"/>
</PreferenceScreen>
