<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Simon Vig Therkildsen
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <SwitchPreference
      android:key="notificationsEnabled"
      android:summary="@string/preference_notifications_summary"
      android:title="@string/preference_notifications"
      app:iconSpaceReserved="false"/>

  <Preference
      android:dependency="notificationsEnabled"
      android:key="notificationTime"
      android:summary="@string/preference_notification_time_summary"
      android:title="@string/preference_notification_time"
      app:iconSpaceReserved="false"/>

  <SwitchPreference
      android:defaultValue="true"
      android:dependency="notificationsEnabled"
      android:key="notificationVibrate"
      android:summary="@string/preference_notification_vibrate_sum"
      android:title="@string/preference_notification_vibrate"
      app:iconSpaceReserved="false"/>

  <SwitchPreference
      android:defaultValue="true"
      android:dependency="notificationsEnabled"
      android:key="notificationSound"
      android:summary="@string/preference_notification_sound_sum"
      android:title="@string/preference_notification_sound"
      app:iconSpaceReserved="false"/>
</PreferenceScreen>
