<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Simon Vig Therkildsen
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingEnd="@dimen/dialogContentPadding"
    android:paddingStart="@dimen/dialogContentPadding">

  <TextView
      android:id="@+id/title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?attr/textAppearanceSubtitle1"
      tools:text="An Awesome Show"/>

  <TextView
      android:id="@+id/message_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/checkin_message_title"
      android:textAppearance="?attr/textAppearanceCaption"/>

  <EditText
      android:id="@+id/message"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      tools:text="I'm watching [item]"/>

  <TextView
      android:id="@+id/share_title"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/share_to"
      android:textAppearance="?attr/textAppearanceSubtitle2"/>

  <CheckBox
      android:id="@+id/facebook"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/facebook"
      android:textAppearance="?attr/textAppearanceBody2"/>

  <CheckBox
      android:id="@+id/twitter"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/twitter"
      android:textAppearance="?attr/textAppearanceBody2"/>

  <CheckBox
      android:id="@+id/tumblr"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/tumblr"
      android:textAppearance="?attr/textAppearanceBody2"/>

</LinearLayout>
