<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2014 Simon Vig Therkildsen
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:orientation="vertical"
    android:paddingBottom="16dp">

  <include layout="@layout/checkmarks"/>

  <TextView
      android:id="@+id/overview"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="4dp"
      tools:text="A long description of a movie."
      style="@style/Widget.InfoText"/>

  <View
      android:id="@+id/genresDivider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider"
      android:visibility="gone"
      tools:visibility="visible"/>

  <TextView
      android:id="@+id/genresTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/genres"
      android:visibility="gone"
      tools:visibility="visible"
      style="@style/Widget.InfoTitle"/>

  <TextView
      android:id="@+id/genres"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      tools:text="Comedy"
      tools:visibility="visible"
      style="@style/Widget.InfoText"/>

  <include
      layout="@layout/section_cast"
      android:visibility="gone"
      tools:visibility="visible"/>

  <include
      layout="@layout/section_comments"
      android:visibility="gone"
      tools:visibility="visible"/>

  <include
      layout="@layout/section_related"
      android:visibility="gone"
      tools:visibility="visible"/>

  <View
      android:id="@+id/linksDivider"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/divider"/>

  <TextView
      android:id="@+id/externalTitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/title_links"
      style="@style/Widget.InfoTitle"/>

  <TextView
      android:id="@+id/trailer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info_trailer"
      android:visibility="gone"
      tools:visibility="visible"
      style="@style/InfoLink"/>

  <TextView
      android:id="@+id/website"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:visibility="gone"
      tools:text="A website"
      tools:visibility="visible"
      style="@style/InfoLink"/>

  <TextView
      android:id="@+id/viewOnTrakt"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:text="@string/info_trakt"
      style="@style/InfoLink"/>

  <TextView
      android:id="@+id/viewOnImdb"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info_imdb"
      android:visibility="gone"
      tools:visibility="visible"
      style="@style/InfoLink"/>

  <TextView
      android:id="@+id/viewOnTmdb"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info_tmdb"
      android:visibility="gone"
      tools:visibility="visible"
      style="@style/InfoLink"/>

  <TextView
      android:id="@+id/viewOnTvdb"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/info_tvdb"
      android:visibility="gone"
      tools:visibility="visible"
      style="@style/InfoLink"/>
</LinearLayout>
