<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/colorBackgroundFloating"
    android:clickable="false"
    android:orientation="vertical">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:ellipsize="end"
      android:paddingEnd="?attr/dialogPreferredPadding"
      android:paddingStart="?attr/dialogPreferredPadding"
      android:paddingTop="@dimen/abc_dialog_padding_top_material"
      android:singleLine="true"
      android:text="@string/prompt_link"
      android:textAlignment="viewStart"
      android:textAppearance="?attr/textAppearanceSubtitle1"
      style="?android:attr/windowTitleStyle"/>

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:paddingEnd="?attr/dialogPreferredPadding"
      android:paddingStart="?attr/dialogPreferredPadding"
      android:text="@string/prompt_link_summary"
      android:textAppearance="?attr/textAppearanceBody1"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="end"
      android:orientation="horizontal"
      android:paddingEnd="12dp"
      android:paddingStart="12dp">

    <TextView
        android:id="@+id/prompt_link_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/no"
        android:textAppearance="?attr/textAppearanceButton"
        style="?attr/buttonBarNegativeButtonStyle"/>

    <TextView
        android:id="@+id/prompt_link_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:text="@string/yes"
        android:textAppearance="?attr/textAppearanceButton"
        style="?attr/buttonBarPositiveButtonStyle"/>
  </LinearLayout>
</LinearLayout>
