<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Simon Vig Therkildsen
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

  <include layout="@layout/toolbar"/>

  <TableLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:stretchColumns="1"
      android:paddingLeft="8dp"
      android:paddingRight="8dp">

    <TableRow>

      <TextView
          android:paddingRight="8dp"
          android:text="@string/list_create_name"/>

      <EditText
          android:id="@+id/name"
          android:layout_column="1"
          android:layout_span="2"
          android:layout_weight="1"
          android:inputType="text"
          android:maxLines="1"/>
    </TableRow>

    <TableRow>

      <TextView
          android:paddingRight="8dp"
          android:text="@string/list_create_description"/>

      <EditText
          android:id="@+id/description"
          android:layout_column="1"
          android:layout_span="2"
          android:layout_weight="1"
          android:inputType="text"
          android:maxLines="3"/>
    </TableRow>

    <TableRow
        android:gravity="center_vertical">

      <TextView
          android:paddingRight="8dp"
          android:text="@string/list_create_privacy"/>

      <Spinner
          android:id="@+id/privacy"
          android:layout_column="2"
          android:layout_gravity="right"/>
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

      <TextView
          android:paddingRight="8dp"
          android:text="@string/list_create_display_numbers"/>

      <CheckBox
          android:id="@+id/displayNumbers"
          android:layout_column="2"
          android:layout_gravity="right"/>
    </TableRow>

    <TableRow
        android:gravity="center_vertical"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

      <TextView
          android:paddingRight="8dp"
          android:text="@string/list_create_allow_comments"/>

      <CheckBox
          android:id="@+id/allowComments"
          android:layout_column="2"
          android:layout_gravity="right"/>
    </TableRow>
  </TableLayout>
</LinearLayout>